Refactoring - Initialization and configuration exposure separated
